--- a/src/login.css
+++ b/src/login.css
@@ -45,14 +45,15 @@ html,
 }
 
 .auth-inner {
-  width: 70%;
-  height:70%;
-  margin: auto;
+  width: 25%;
+  height: 70%;
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 40px 55px 45px 55px;
   border-radius: 15px;
   transition: all 0.3s;
+  margin: auto;
+  position: relative;
 }
 
 .auth-wrapper .form-control:focus {
@@ -62,7 +63,7 @@ html,
 
 .auth-wrapper h3 {
   text-align: center;
-  margin: 0;
+  margin: auto;
   line-height: 1;
   padding-bottom: 20px;
 }
@@ -84,7 +85,27 @@ html,
   color: #167bff;
 }
 
+.container {
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
+
 #logo {
-  height: 70px;
-  width: 70px;
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  left: 0px;
+  margin-top: 20px;
+  margin-left: 50px;
+}
+
+#signup {
+  margin: auto;
+  margin-top: 50px;
+  text-align: center;
+}
+
+h6:hover {
+  cursor: pointer;
 }
