--- a/src/main.css
+++ b/src/main.css
@@ -18,6 +18,12 @@
   margin-left:30%;
   transition: all 0.4s ease 0s;
   }
+  .hoveris{
+      margin-top:0;
+  }
+  hoveris:hover{
+      cursor:pointer;
+  }
   .submit:hover {
     text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
     -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
@@ -31,6 +37,7 @@
       transition: all 0.4s ease 0s;
       }
         button {
+            margin-top:3%;
         display: inline-flex;
         align-items: center;
         background: #60a3bc;
@@ -108,10 +115,39 @@
       transition: background .3s, transform .3s, box-shadow .3s;
        will-change: transform;
     }
-    .graph{
-      width:40%;
-      height:40%;
+
+    .statistics {
+        display:flex;
+        justify-content: center;
+        text-align: left;
+        padding-left:5%;
+        padding-right:4%;
     }
-    .statistics{
-      flex:1;
-    }
+  .info {
+    width: 50%;
+    height:70%;
+    margin-top:5%;
+    margin-right:3%;
+    background: #ffffff;
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+    padding: 40px 55px 45px 55px;
+    border-radius: 15px;
+    transition: all 0.3s;
+  }
+  .infot {
+    width: 30%;
+    height:40%;
+    margin-top:5%;
+    margin-right:15%;
+    background: #ffffff;
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+    padding: 40px 55px 45px 55px;
+    border-radius: 15px;
+    transition: all 0.3s;
+  }
+  .header {
+    margin-top:1%;
+    text-align: center;
+    color: white;
+    font-size: 2.2rem;
+  }
