--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,9 @@
-
-.inputBox{
-    width:100%;
-    height:30%;
-  }
-  .submit{
-    color: #fff !important;
+.inputBox {
+  width: 100%;
+  height: 30%;
+}
+.submit {
+  color: #fff !important;
   text-transform: uppercase;
   text-decoration: none;
   background: #60a3bc;
@@ -12,142 +11,182 @@
   border-radius: 2rem;
   display: inline-block;
   border: none;
-  width:40%;
-  height:20%; 
-  margin-top:5%;
-  margin-left:30%;
+  width: 40%;
+  height: 20%;
+  margin-top: 5%;
+  margin-left: 30%;
   transition: all 0.4s ease 0s;
-  }
-  .hoveris{
-      margin-top:0;
-  }
-  hoveris:hover{
-      cursor:pointer;
-  }
-  .submit:hover {
-    text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
-    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-    transition: all 0.4s ease 0s;
-    }
-    .submit:hover {
-      text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
-      -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-      -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-      transition: all 0.4s ease 0s;
-      }
-        button {
-            margin-top:3%;
-        display: inline-flex;
-        align-items: center;
-        background: #60a3bc;
-        box-shadow: 0 3px 2px 0 rgba(0,0,0,0.1);
-        border-radius: 25px;
-        height: 2rem;
-        padding: 0 1rem;
-        color: #fff;
-        text-transform: uppercase;
-        text-decoration: none;
-        transition: background .3s, transform .3s, box-shadow .3s;
-         will-change: transform;
-      }
-      
-      button:hover {
-        background: darken(#60a3bc,10%);
-        box-shadow: 0 4px 17px rgba(0,0,0,0.2);
-        transform: translate3d(0, -2px, 0);
-      }
-      button:active {
-        box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
-        transform: translate3d(0, 1px, 0);
-      }
-      
-    .Button{
-      color: #fff !important;
-    text-transform: uppercase;
-    text-decoration: none;
-    background: #60a3bc;
-    padding: 1rem;
-    border-radius: 2rem;
-    display: inline-block;
-    border: none;
-    width:40%;
-    height:20%;
-    
-    transition: all 0.4s ease 0s;
-    }
-    .menu{
-      width:40%;
-      height:60%;
-      margin:auto;
-      padding-top:10%;
-      justify-content: center;
-      align-items: center;
-    }
-    .font{
-      font-size:2rem;
-      color:#60a3bc;
-      margin-bottom:3%;
-    }
-    .Sidemenu {
-      flex-wrap: wrap;
-      width:10%;
-      margin-left:10%;
-      margin-top:5%;
-    } 
-    .Center{
-      padding-left:30%;
-    }
-    .back{
-      margin-top:25%;
-      margin-left:85%;
-    }
-    .menubuttons {
-      display: flex;
-      align-items: center;
-      background: #60a3bc;
-      box-shadow: 0 3px 2px 0 rgba(0,0,0,0.1);
-      border-radius: 25px;
-      height: 2rem;
-      color: #fff;
-      text-transform: uppercase;
-      text-decoration: none;
-      transition: background .3s, transform .3s, box-shadow .3s;
-       will-change: transform;
-    }
+}
+.hoveris {
+  margin-top: 0;
+}
+hoveris:hover {
+  cursor: pointer;
+}
+.submit:hover {
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
+}
+.submit:hover {
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
+}
+button {
+  margin-top: 3%;
+  display: inline-flex;
+  align-items: center;
+  box-shadow: 0 3px 2px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 25px;
+  height: 2rem;
+  padding: 0 1rem;
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
+  will-change: transform;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  text-transform: uppercase;
+  width: 80%;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
 
-    .statistics {
-        display:flex;
-        justify-content: center;
-        text-align: left;
-        padding-left:5%;
-        padding-right:4%;
-    }
-  .info {
-    width: 50%;
-    height:70%;
-    margin-top:5%;
-    margin-right:3%;
-    background: #ffffff;
-    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-    padding: 40px 55px 45px 55px;
-    border-radius: 15px;
-    transition: all 0.3s;
-  }
-  .infot {
-    width: 30%;
-    height:40%;
-    margin-top:5%;
-    margin-right:15%;
-    background: #ffffff;
-    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-    padding: 40px 55px 45px 55px;
-    border-radius: 15px;
-    transition: all 0.3s;
-  }
-  .header {
-    margin-top:1%;
-    text-align: center;
-    color: white;
-    font-size: 2.2rem;
-  }
+.menubutton {
+  margin-bottom: 20px;
+}
+
+button:hover {
+  background: darken(#60a3bc, 10%);
+  box-shadow: 0 4px 17px rgba(0, 0, 0, 0.2);
+  transform: translate3d(0, -2px, 0);
+}
+button:active {
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+  transform: translate3d(0, 1px, 0);
+}
+
+.Button {
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #60a3bc;
+  padding: 1rem;
+  border-radius: 2rem;
+  display: inline-block;
+  border: none;
+  width: 40%;
+  height: 20%;
+
+  transition: all 0.4s ease 0s;
+}
+.menu {
+  width: 40%;
+  height: 60%;
+  margin: auto;
+  padding-top: 10%;
+  justify-content: center;
+  align-items: center;
+}
+.font {
+  font-size: 2rem;
+  color: #60a3bc;
+  margin-bottom: 3%;
+}
+#wrapDiv {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.Sidemenu {
+  width: 15%;
+  height: 100%;
+  background-color: whitesmoke;
+  text-align: center;
+}
+.Center {
+  background-color: blue;
+  width: 300px;
+  height: 300px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+.back {
+  margin-top: 25%;
+  margin-left: 85%;
+}
+
+.statistics {
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  padding-left: 5%;
+  padding-right: 4%;
+}
+.info {
+  width: 50%;
+  height: 70%;
+  margin-top: 5%;
+  margin-right: 3%;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  transition: all 0.3s;
+}
+.history {
+  width: 30%;
+  margin-top: 5%;
+  margin-right: 3%;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  transition: all 0.3s;
+}
+.infot {
+  width: 30%;
+  height: 40%;
+  margin-top: 5%;
+  margin-right: 15%;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  transition: all 0.3s;
+}
+.header {
+  margin-top: 1%;
+  text-align: center;
+  color: white;
+  font-size: 2.2rem;
+}
+
+#logoMainScreen {
+  width: 100px;
+  height: 100px;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  left: 0px;
+}
+
+#balance {
+  margin-top: 80px;
+  font-size: 30px;
+  color: black;
+}
+
+#balanceExpenses {
+  color: #007bff;
+}
