--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800");
+
 .inputBox {
   width: 100%;
   height: 30%;
@@ -96,21 +98,23 @@ button:active {
   justify-content: center;
   align-items: center;
 }
-.font {
-  font-size: 2rem;
-  color: #60a3bc;
-  margin-bottom: 3%;
-}
+
 #wrapDiv {
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: row;
+  overflow: auto;
 }
 .Sidemenu {
   width: 15%;
   height: 100%;
   background-color: whitesmoke;
   text-align: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 .Center {
   background-color: blue;
@@ -128,15 +132,16 @@ button:active {
 }
 
 .statistics {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   text-align: left;
   padding-left: 5%;
   padding-right: 4%;
+  flex-direction: column;
 }
 .info {
-  width: 50%;
-  height: 70%;
+  width: 25em;
+  height: 25em;
   margin-top: 5%;
   margin-right: 3%;
   background: #ffffff;
@@ -146,25 +151,35 @@ button:active {
   transition: all 0.3s;
 }
 .history {
-  width: 30%;
   margin-top: 5%;
   margin-right: 3%;
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 40px 55px 45px 55px;
-  border-radius: 15px;
+  border-radius: 0.25rem;
   transition: all 0.3s;
+  position: relative;
+  left: 75%;
+  font-family: "Times New Roman", Times, serif;
+  text-transform: uppercase;
+}
+.history h2 {
+  color: #007bff;
 }
 .infot {
-  width: 30%;
-  height: 40%;
+  height: 20em;
+  height: 20em;
   margin-top: 5%;
   margin-right: 15%;
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  padding: 40px 55px 45px 55px;
   border-radius: 15px;
   transition: all 0.3s;
+  font-size: 10px;
+  padding-left: 30px;
+  text-transform: uppercase;
+  position: relative;
+  left: 7%;
 }
 .header {
   margin-top: 1%;
@@ -189,4 +204,58 @@ button:active {
 
 #balanceExpenses {
   color: #007bff;
+}
+
+#datePickerDiv {
+  position: relative;
+  margin-top: 5%;
+  margin-left: 105%;
+}
+
+#datepicker1 {
+  margin-bottom: 10px;
+  border-color: #007bff;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  text-transform: uppercase;
+  border-radius: 0.25rem;
+}
+
+#datepicker2 {
+  border-color: #007bff;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  text-transform: uppercase;
+  border-radius: 0.25rem;
+}
+
+#incomeDiv {
+  position: relative;
+  left: 27%;
+}
+
+#expensesButton {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(16%, 880%);
+  width: 10%;
+}
+
+.calendar {
+  width: 45em;
+  margin-top: 5%;
+  margin-right: 5%;
+  margin-left:10%;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  transition: all 0.3s;
+}
+
+.wrapperis{
+  display:flex;
+  width:100%;
 }
